--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Website</title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
     <h1>Welcome to ours Website</h1>
+    <footer>
+      <p>&copy; 2025 My Website</p>
+    </footer>
   </body>
 </html>
