--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Welcome to ours Website</h1>
+    <h2>freind</h2>
     <footer>
       <p>&copy; 2025 My Website</p>
     </footer>
