added hero section

--- a/index.html
+++ b/index.html
@@ -14,8 +14,48 @@
         <li><a href="#">form</a></li>
       </ul>
     </nav>
-    <h1>Welcome to ours Website</h1>
-    <h2>freind</h2>
+    <section>
+      <h1>Welcome to ours Website</h1>
+    </section>
+    <section>
+      <h1>Hero Section</h1>
+      <div>
+        <img
+          src="https://upload.wikimedia.org/wikipedia/en/thumb/d/d6/Superman_Man_of_Steel.jpg/250px-Superman_Man_of_Steel.jpg"
+          alt=""
+        />
+        <p>
+          Superman is a fictional superhero who first appeared in DC Comics
+          publications in 1938 and has since become a global pop culture icon.
+          He is known for his superhuman strength, speed, flight, and unwavering
+          commitment to truth and justice.
+        </p>
+      </div>
+      <div>
+        <img
+          src="https://upload.wikimedia.org/wikipedia/en/e/e1/Spider-Man_PS4_cover.jpg"
+          alt=""
+        />
+        <p>
+          Spider-Man is a superhero in American comic books published by Marvel
+          Comics. Created by writer-editor Stan Lee and artist Steve Ditko, he
+          first appeared in the anthology comic book Amazing Fantasy #15 in the
+          Silver Age of Comic Books.
+        </p>
+      </div>
+      <div>
+        <img
+          src="https://cdn.marvel.com/content/2x/003cap_ons_cut_mob_01_1.jpg"
+          alt=""
+        />
+        <p>
+          Captain America is the superhero alter ego of Steve Rogers, a World
+          War II-era hero who was given the Super Soldier serum to become a
+          super-soldier. He is a symbol of American ideals, a powerful hero, and
+          the leader of the Avengers.
+        </p>
+      </div>
+    </section>
     <footer>
       <p>&copy; 2025 My Website</p>
     </footer>
