added contact form

--- a/index.html
+++ b/index.html
@@ -56,6 +56,21 @@
         </p>
       </div>
     </section>
+    <section>
+      <h1>Contact</h1>
+      <form action="contact-form">
+        <label for="name">Name</label>
+        <input type="text" placeholder="Name">
+        
+        <label for="email">Email</label>
+        <input type="text" placeholder="Email">
+
+        <label for="message">Message</label>
+        <textarea name="message" id="message" placeholder="message" cols="100" rows="10"></textarea>
+
+        <button type="submit">Send</button>
+      </form>
+    </section>
     <footer>
       <p>&copy; 2025 My Website</p>
     </footer>
