--- a/index.html
+++ b/index.html
@@ -60,16 +60,42 @@
       <h1>Contact</h1>
       <form action="contact-form">
         <label for="name">Name</label>
-        <input type="text" placeholder="Name">
-        
+        <input type="text" placeholder="Name" />
+
         <label for="email">Email</label>
-        <input type="text" placeholder="Email">
+        <input type="text" placeholder="Email" />
 
         <label for="message">Message</label>
-        <textarea name="message" id="message" placeholder="message" cols="100" rows="10"></textarea>
+        <textarea
+          name="message"
+          id="message"
+          placeholder="message"
+          cols="100"
+          rows="10"
+        ></textarea>
 
         <button type="submit">Send</button>
       </form>
+    </section>
+    <section class="testimonials">
+      <h2>Customer Testimonials</h2>
+
+      <div class="testimonial">
+        <p>"Amazing service! I was impressed with the speed and quality."</p>
+        <h4>- John Doe</h4>
+      </div>
+
+      <div class="testimonial">
+        <p>"Great experience from start to finish. Highly recommended!"</p>
+        <h4>- Sarah K.</h4>
+      </div>
+
+      <div class="testimonial">
+        <p>
+          "Professional, reliable, and friendly. I will definitely come back."
+        </p>
+        <h4>- Michael T.</h4>
+      </div>
     </section>
     <footer>
       <p>&copy; 2025 My Website</p>
